# Taekwondo-Scoring

./: CMakeLists.txt  CreateMatchPage.qml  CreateMatchPageForm.ui.qml  GeneralSetup.qml  GeneralSetupForm.ui.qml  HostPage.qml  HostPageForm.ui.qml  JoinMatchPage.qml  JoinMatchPageForm.ui.qml  JuryPage.qml  JuryPageForm.ui.qml  MatchSettings.qml  MatchSettingsForm.ui.qml  RoleSelectionPage.qml  RoleSelectionPageForm.ui.qml  StartUp.qml  StartUpForm.ui.qml  StartUpPage.qml  StartUpPageForm.ui.qml  Taekwondo-Scoring_en_US.ts  connection.cpp  gamestate.cpp  gamestate.h  initializeserver.cpp  initializeserver.h  main.cpp  main.qml  qml.qrc
server/: client.cpp  client.h  gamestate.cpp  gamestate.h  gamestatemanager.cpp  gamestatemanager.h  network.cpp  network.h  server.cpp  server.h  serverthread.cpp  serverthread.h
ui/: connection.h
